[project]
name = "infohealth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "google-auth>=2.49.1",
    "gspread>=6.2.1",
    "ngrok>=1.7.0",
    "pyngrok>=7.5.1",
    "resend>=2.26.0",
    "sendgrid>=6.12.5",
    "uvicorn>=0.42.0",
]
